--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,16 @@
 Source: formatusb
 Section: admin
 Priority: optional
-Maintainer: Davanico <formatusb1122@gmail.com>
+Maintainer: danko1122 <formatusb1122@gmail.com>
 Build-Depends: debhelper-compat (= 13),
                qt6-base-dev,
                qt6-base-dev-tools,
                qt6-tools-dev,
                qt6-tools-dev-tools
 Standards-Version: 3.9.8
-Homepage: https://github.com/WHO-AM-I-404/formatusb
-Vcs-Git: https://github.com/WHO-AM-I-404/formatusb.git
-Vcs-Browser: https://github.com/WHO-AM-I-404/formatusb
+Homepage: https://github.com/danko1122q/formatusb
+Vcs-Git: https://github.com/danko1122q/formatusb.git
+Vcs-Browser: https://github.com/danko1122q/formatusb
 
 Package: formatusb
 Architecture: any
